--- a/WEB/100_1/kochchef/errorlog.html
+++ b/WEB/100_1/kochchef/errorlog.html
@@ -1,22 +1,120 @@
 <h3>Exception information:</h3>
 
-         <p><strong>Date:</strong> Jun 11, 2014 13:17PM</p>
+         <p><strong>Date:</strong> Jun 12, 2014 20:47PM</p>
 
-         <p><strong>Message:</strong> SQLSTATE[22001]: String data, right truncated: 1406 Data too long for column 'name' at row 1</p>
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1045] Access denied for user 'koch'@'localhost' (using password: YES)</p>
 
-         <p><strong>Code:</strong> 22001</p>
+         <p><strong>Code:</strong> 1045</p>
 
          <p><strong>File:</strong> /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php</p>
 
-         <p><strong>Line:</strong> 42</p>
+         <p><strong>Line:</strong> 8</p>
 
          <h3>Stack trace:</h3>
 
-         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(42): PDOStatement->execute()
-#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(20): Database->insert('rezepte', Array)
-#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(41): Rezept_Model->insert(Array)
-#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(88): Rezepte->add()
-#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
-#5 {main}</pre>
+         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(8): PDO->__construct('mysql:host=127....', 'koch', 'kochkoch')
+#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/model.php(9): Database->__construct()
+#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(5): Model->__construct()
+#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/controller.php(37): Rezept_Model->__construct()
+#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(6): Controller->loadModel('rezept_model')
+#5 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(85): Rezepte->__construct()
+#6 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Jun 12, 2014 20:47PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1045] Access denied for user 'koch'@'localhost' (using password: YES)</p>
+
+         <p><strong>Code:</strong> 1045</p>
+
+         <p><strong>File:</strong> /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php</p>
+
+         <p><strong>Line:</strong> 8</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(8): PDO->__construct('mysql:host=127....', 'koch', 'kochkoch')
+#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/model.php(9): Database->__construct()
+#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(5): Model->__construct()
+#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/controller.php(37): Rezept_Model->__construct()
+#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(6): Controller->loadModel('rezept_model')
+#5 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(85): Rezepte->__construct()
+#6 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Jun 12, 2014 20:47PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1045] Access denied for user 'koch'@'localhost' (using password: YES)</p>
+
+         <p><strong>Code:</strong> 1045</p>
+
+         <p><strong>File:</strong> /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php</p>
+
+         <p><strong>Line:</strong> 8</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(8): PDO->__construct('mysql:host=127....', 'koch', 'kochkoch')
+#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/model.php(9): Database->__construct()
+#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(5): Model->__construct()
+#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/controller.php(37): Rezept_Model->__construct()
+#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(6): Controller->loadModel('rezept_model')
+#5 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(85): Rezepte->__construct()
+#6 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Jun 12, 2014 20:47PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1045] Access denied for user 'koch'@'localhost' (using password: YES)</p>
+
+         <p><strong>Code:</strong> 1045</p>
+
+         <p><strong>File:</strong> /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php</p>
+
+         <p><strong>Line:</strong> 8</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(8): PDO->__construct('mysql:host=127....', 'koch', 'kochkoch')
+#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/model.php(9): Database->__construct()
+#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(5): Model->__construct()
+#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/controller.php(37): Rezept_Model->__construct()
+#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(6): Controller->loadModel('rezept_model')
+#5 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(85): Rezepte->__construct()
+#6 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Jun 12, 2014 20:43PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1045] Access denied for user 'koch'@'localhost' (using password: YES)</p>
+
+         <p><strong>Code:</strong> 1045</p>
+
+         <p><strong>File:</strong> /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php</p>
+
+         <p><strong>Line:</strong> 8</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/helpers/database.php(8): PDO->__construct('mysql:host=127....', 'koch', 'kochkoch')
+#1 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/model.php(9): Database->__construct()
+#2 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/models/rezept_model.php(5): Model->__construct()
+#3 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/controller.php(37): Rezept_Model->__construct()
+#4 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/controllers/rezepte.php(6): Controller->loadModel('rezept_model')
+#5 /Applications/XAMPP/xamppfiles/htdocs/kochchef/app/core/router.php(85): Rezepte->__construct()
+#6 /Applications/XAMPP/xamppfiles/htdocs/kochchef/index.php(28): Router::dispatch()
+#7 {main}</pre>
 
          <hr />
